charts/consul_conf/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: consul-reference-grant
  namespace: app
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: consul  # Must match the namespace that api-gw/routes.yaml is deployed into
  to:
    - group: ""
      kind: Service
