charts/consul_conf/nginx_ok.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: app
  labels:
    app: nginx
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: app
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      service: nginx
      app: nginx
  template:
    metadata:
      labels:
        service: nginx
        app: nginx
      annotations:
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: nginx
      containers:
      - name: nginx
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
